--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -52,7 +52,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow18">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn19_1">
-                                        <wm-label padding="unset 0.5em" name="label13" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a vendor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
+                                        <wm-label padding="unset 0.5em" name="label13" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a contractor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
                                         accessroles="CXAdmin" fontweight="bold" fontstyle="italic"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -88,7 +88,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow19_1">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                                        <wm-label padding="unset 0.5em" name="label14" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a vendor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
+                                        <wm-label padding="unset 0.5em" name="label14" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a contractor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
                                         accessroles="CXAdmin" fontweight="bold" fontstyle="italic"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -124,7 +124,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow20_1">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn21_1">
-                                        <wm-label padding="unset 0.5em" name="label15" accessroles="CXAdmin" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a vendor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
+                                        <wm-label padding="unset 0.5em" name="label15" accessroles="CXAdmin" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a contractor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
                                         fontweight="bold" fontstyle="italic"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
